Bug 1336448 - Disable helper thread logging in Tracelogger. r=bbouvier, a=jcristau